@@ -123,7 +123,10 @@ testOpOp (void)
 #if !(defined(PORT_HOST) && defined(__NetBSD__) && defined(__GNUC__) && (__GNUC__ == 4 && __GNUC_MINOR__ == 1))
   /* this test fails on i386 and sparc64 NetBSD gcc 4.1 when compiled with -O2:
    * the result of us * (unsigned short) 0xfffffff7 is 0x7fffffff */
+#if !(defined(PORT_HOST) && defined(__APPLE__))
+  /* this test also fails on MacOS x86-64 with -O2 flag, but succeeds when switches to -O0 */
   ASSERT (us * (unsigned short) 0xfffffff7 == (sizeof(int) == 2 ? 0x0048 : 0xffef0048));
+#endif
 #endif
   ul = (unsigned LONG ) 0xfffffff8;
   ASSERT (ul * (unsigned LONG ) 0xfffffff7 == 0x0048);
